--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="index.html"><img src="images/logo.png" alt="#" /></a>
+                              <a href="index.html"><img src="images/u.png" alt="#" /></a>
                            </div>
                         </div>
                      </div>
