--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                            </div>
                            <div class="meet">
                               <h3>ruweidha</h3>
-                              <p>al your makeup queries</p>
+                              <p>all your makeup queries</p>
                            </div>
                         </div>
                      </div>
@@ -407,7 +407,7 @@
                      <h3>Nail Salon  </h3>
                      <p class="variat" >Nail salons offer a variety of options for nail care, examples of which include acrylics, silk or fiberglass wraps, French manicures, polish, and pedicure</p>
                   </div>
-                  <div class="col-md-2 col-sm-6">
+                  <div class<="col-md-2 col-sm-6">
                      <h3>Useful Link</h3>
                      <ul class="link_menu">
                         <li class="active"><a href="index.html">Home</a></li>
